Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-19298

Assertion `space->id != 0xFFFFFFFEU || space == fil_system.temp_space' failed in Check::validate upon crash upgrade from 10.2.22

    XMLWordPrintable

Details

    Description

      10.3 cc492bfd

      mysqld: /home/buildbot/10.3-src/storage/innobase/fil/fil0fil.cc:4626: static ulint Check::validate(const fil_space_t*): Assertion `space->id != 0xFFFFFFFEU || space == fil_system.temp_space' failed.
       
      bin/mysqld(0x23f9b39 Check::validate(fil_space_t const*) + 868)[0x5607efe58b39]
      bin/mysqld(0x23f50d7 fil_validate() + 490)[0x5607efe540d7]
      bin/mysqld(0x23dba17 fil_validate_skip() + 53)[0x5607efe3aa17]
      bin/mysqld(0x23f3fc5 fil_aio_wait(unsigned long) + 258)[0x5607efe52fc5]
      bin/mysqld(0x2177385 io_handler_thread + 1633)[0x5607efbd6385]
      /lib/x86_64-linux-gnu/libpthread.so.0(+0x76ba)[0x7fce33c166ba]
      /lib/x86_64-linux-gnu/libc.so.6(clone+0x6d)[0x7fce330ab82d]
      

      The failure happens upon 10.3 startup on this datadir with

      --innodb-page-size=4K --innodb-compression-algorithm=none
      

      but it's very poorly reproducible: it only happens once in hundreds of consequent attempts (even though there is no external concurrency there, just simple server startup on the same datadir); on some reason, so far it's only happened on an ASAN build; and it might also be limited to some particular systems – I was able to reproduce it on Xenial but not on Jessie, although given the irregularity, it could be a coincidence.

      Attachments

        Issue Links

          Activity

            People

              kevg Eugene Kosov (Inactive)
              elenst Elena Stepanova
              Votes:
              0 Vote for this issue
              Watchers:
              3 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - Not Specified
                  Not Specified
                  Remaining:
                  Remaining Estimate - 0d
                  0d
                  Logged:
                  Time Spent - 4.5h
                  4.5h

                  Git Integration

                    Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.