MDEV-19298 Assertion `space->id != 0xFFFFFFFEU || space == fil_system.temp_space' failed in Check::validate upon crash upgrade from 10.2.22

This issue is pretty much the same as MDEV-20213.
The fix is similar to:
3c238ac51c21dd0b7ba410012cf317298873c0c2
52c4abbff2ec4b97d6c69f238457bf759591ce15

Check::validate(): fix a debug assertion

SysTablespace::open_or_create(): protect assigning to a shared
variable with a mutex