storage/innobase/fsp/fsp0sysspace.cc
@@ -904,9 +904,13 @@ SysTablespace::open_or_create(
 		} else if (is_temp) {
 			ut_ad(!fil_system.temp_space);
 			ut_ad(space_id() == SRV_TMP_SPACE_ID);
-			space = fil_system.temp_space = fil_space_create(
+			space = fil_space_create(
 				name(), SRV_TMP_SPACE_ID, flags(),
 				FIL_TYPE_TEMPORARY, NULL);
+
+			mutex_enter(&fil_system.mutex);
+			fil_system.temp_space = space;
+			mutex_exit(&fil_system.mutex);
 			if (!space) {
 				return DB_ERROR;
 			}
